--- a/code/warehouseReport/index.html
+++ b/code/warehouseReport/index.html
@@ -119,7 +119,7 @@
         }
         getReportData();
 
-        setInterval(getReportData, 5000); //定时刷新
+        setInterval(getReportData, 1000*60*2); //定时刷新
     </script>
 </body>
 
