--- a/code/warehouseReport/pickingUserReport.html
+++ b/code/warehouseReport/pickingUserReport.html
@@ -12,7 +12,14 @@
     <link rel="stylesheet" href="styles/app.css">
 </head>
 <body>
-    <div id="main" style="width:100%;height:90vh;"></div>
+     <div class="container" style="height:100%;width:100%">
+        <div id="title" class="row">
+            拣选统计
+        </div>
+        <div class="row" style="height:90vh;width:100%">
+            <div id="main" class="col-md-12" style="height:100%"></div>
+        </div>
+    </div>
     <script type="text/javascript" src="scripts/libs/zepto/zepto.min.js"></script>
     <script type="text/javascript" src="scripts/libs/echarts/echarts.min.js"></script>
     <script type="text/javascript">
