--- a/code/warehouseReport/packingReport.html
+++ b/code/warehouseReport/packingReport.html
@@ -14,8 +14,11 @@
 
 <body>
     <div class="container" style="height:100%;width:100%">
-        <div class="row" style="height:100%;width:100%">
-            <div id="main" class="col-md-12" style="height:90vh"></div>
+        <div id="title" class="row">
+            包装统计
+        </div>
+        <div class="row" style="height:90vh;width:100%">
+            <div id="main" class="col-md-12" style="height:100%"></div>
         </div>
     </div>
     <!--<div id="main" style="width:100%;height:100%;"></div>-->
