--- a/code/FlippingCard/main.html
+++ b/code/FlippingCard/main.html
@@ -1,21 +1,23 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>卡片翻转</title>
-    <meta name="description" content="html5" />
+    <meta charset="UTF-8">
+    <title>Flipping Card (AngularJS)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-
-    <link rel="stylesheet" type="text/css" href="app.css" />
-
+    <script src="//use.typekit.net/tiv5pep.js"></script>
+    <script>
+        try {
+            Typekit.load();
+        } catch (e) {}
+    </script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
     <div ng-app="cardFlipper" ng-controller="AppController">
-        {{name}}
         <h1>Card Flipping AngularJS</h1>
         <div class="flip-container">
             <div class="flipper" ng-click="flipCard()" ng-class="{'flipToFront':isCardRevealed, 'flipToBack':!isCardRevealed}">
@@ -38,10 +40,14 @@
         </footer>
         <br />
         <br />
-    </div>
 
-    <script src="//cdn.bootcss.com/angular.js/1.4.9/angular.js"></script>
-    <script src="app.js"></script>
+
+    </div>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js'></script>
+
+    <script src="js/index.js"></script>
+
+
 
 </body>
 
