console background image

--- a/code/js-console/index.html
+++ b/code/js-console/index.html
@@ -20,9 +20,14 @@
       <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+         body{
+             background-image: url('tiny_grid.png')
+         }
+    </style>
 </head>
 
-<body>
+<body style="background-url:''">
     <div style="margin-top:10px;">
         <button type="button" onclick="executeJs()" class="btn btn-primary">执行</button>
         <button type="button" onclick="clearConsole()" class="btn btn-primary">清除</button>
