--- a/code/warehouseReport/packingReport.html
+++ b/code/warehouseReport/packingReport.html
@@ -101,7 +101,7 @@
            var getReportData = function() {
             //warehouseChart.showLoading();
             $.ajax({
-                url: 'http://192.168.200.138:8001/DmCamara.asmx/GetPackingJson',
+                url: 'http://192.168.200.138:8001/SePackageWeb.asmx/GetPackingJson',
                 type: 'get',
                 dataType: 'json',
                 success: function(data) {
