--- a/code/snow/index.html
+++ b/code/snow/index.html
@@ -7,7 +7,8 @@
 <style type="text/css">
 body {
 	background-color:#000044;
-	background:url(images/bg.jpg) repeat-x;
+	background:url(images/timg.jpg)  no-repeat;
+    background-size: cover;
 	margin:0px;
 	overflow:hidden;
 }
