--- a/code/markdown/bootstrap-markdown/index.html
+++ b/code/markdown/bootstrap-markdown/index.html
@@ -540,8 +540,9 @@ Enjoy!</textarea>
   <!--<script src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js"type="text/javascript"></script>-->
    <script src="http://cdn.bootcss.com/jquery/2.2.1/jquery.js"></script>
    <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-   <script src="http://cdn.bootcss.com/markdown.js/0.4.0/markdown.min.js"></script>
-   <script src="http://cdn.bootcss.com/to-markdown/3.0.3/to-markdown.min.js"></script>
+   <!--<script src="http://cdn.bootcss.com/markdown.js/0.4.0/markdown.min.js"></script>-->
+   <script src="http://cdn.bootcss.com/marked/0.3.6/marked.min.js"></script>
+   <!--<script src="http://cdn.bootcss.com/to-markdown/3.0.3/to-markdown.min.js"></script>-->
    <script src="http://cdn.bootcss.com/bootstrap-markdown/2.10.0/js/bootstrap-markdown.js"></script>
   <!--<script src="locale/bootstrap-markdown.fr.js"></script>-->
   <!--<script src="//rawgit.com/jeresig/jquery.hotkeys/master/jquery.hotkeys.js"></script>-->
